{
  "version": 4,
  "terraform_version": "0.14.2",
  "serial": 474,
  "lineage": "43fee23e-40d8-7ee9-471b-d3c60b4884c8",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "ni_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/495322cb-95ae-4e66-b31d-1ea25d0b4ada/resourceGroups/prod-confluent-kafka-rg/providers/Microsoft.Network/networkInterfaces/prod-confluent-kafka-rg-nic-1",
            "internal_domain_name_suffix": "ssulibegqmyuvj2wfw2ubcynjh.cx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.0.132",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/495322cb-95ae-4e66-b31d-1ea25d0b4ada/resourceGroups/prod-confluent-kafka-rg/providers/Microsoft.Network/publicIPAddresses/prod-confluent-kafka-ip-1",
                "subnet_id": "/subscriptions/495322cb-95ae-4e66-b31d-1ea25d0b4ada/resourceGroups/prod-confluent-kafka-rg/providers/Microsoft.Network/virtualNetworks/prod-confluent-kafka-network/subnets/prod-confluent-kafka-rg-subnet"
              }
            ],
            "location": "eastus2",
            "name": "prod-confluent-kafka-rg-nic-1",
            "private_ip_address": "10.0.0.132",
            "private_ip_addresses": [
              "10.0.0.132"
            ],
            "resource_group_name": "prod-confluent-kafka-rg"
          },
          "dependencies": [
            "azurerm_public_ip.pi_1",
            "azurerm_resource_group.rg",
            "azurerm_subnet.sb",
            "azurerm_virtual_network.vn"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "ni_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/495322cb-95ae-4e66-b31d-1ea25d0b4ada/resourceGroups/prod-confluent-kafka-rg/providers/Microsoft.Network/networkInterfaces/prod-confluent-kafka-rg-nic-2",
            "internal_domain_name_suffix": "ssulibegqmyuvj2wfw2ubcynjh.cx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.0.133",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/495322cb-95ae-4e66-b31d-1ea25d0b4ada/resourceGroups/prod-confluent-kafka-rg/providers/Microsoft.Network/publicIPAddresses/prod-confluent-kafka-ip-2",
                "subnet_id": "/subscriptions/495322cb-95ae-4e66-b31d-1ea25d0b4ada/resourceGroups/prod-confluent-kafka-rg/providers/Microsoft.Network/virtualNetworks/prod-confluent-kafka-network/subnets/prod-confluent-kafka-rg-subnet"
              }
            ],
            "location": "eastus2",
            "name": "prod-confluent-kafka-rg-nic-2",
            "private_ip_address": "10.0.0.133",
            "private_ip_addresses": [
              "10.0.0.133"
            ],
            "resource_group_name": "prod-confluent-kafka-rg"
          },
          "dependencies": [
            "azurerm_public_ip.pi_2",
            "azurerm_resource_group.rg",
            "azurerm_subnet.sb",
            "azurerm_virtual_network.vn"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "ni_3",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/495322cb-95ae-4e66-b31d-1ea25d0b4ada/resourceGroups/prod-confluent-kafka-rg/providers/Microsoft.Network/networkInterfaces/prod-confluent-kafka-rg-nic-3",
            "internal_domain_name_suffix": "ssulibegqmyuvj2wfw2ubcynjh.cx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.0.134",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/495322cb-95ae-4e66-b31d-1ea25d0b4ada/resourceGroups/prod-confluent-kafka-rg/providers/Microsoft.Network/publicIPAddresses/prod-confluent-kafka-ip-3",
                "subnet_id": "/subscriptions/495322cb-95ae-4e66-b31d-1ea25d0b4ada/resourceGroups/prod-confluent-kafka-rg/providers/Microsoft.Network/virtualNetworks/prod-confluent-kafka-network/subnets/prod-confluent-kafka-rg-subnet"
              }
            ],
            "location": "eastus2",
            "name": "prod-confluent-kafka-rg-nic-3",
            "private_ip_address": "10.0.0.134",
            "private_ip_addresses": [
              "10.0.0.134"
            ],
            "resource_group_name": "prod-confluent-kafka-rg"
          },
          "dependencies": [
            "azurerm_public_ip.pi_3",
            "azurerm_resource_group.rg",
            "azurerm_subnet.sb",
            "azurerm_virtual_network.vn"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "sg1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/495322cb-95ae-4e66-b31d-1ea25d0b4ada/resourceGroups/prod-confluent-kafka-rg/providers/Microsoft.Network/networkSecurityGroups/prod-confluent-kafka-rg-mgmt-nsg1",
            "location": "eastus2",
            "name": "prod-confluent-kafka-rg-mgmt-nsg1",
            "resource_group_name": "prod-confluent-kafka-rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "client-broker",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "9092",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "client-broker",
                "priority": 120,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "connect-rest-api",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "8083",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "connect-rest-api",
                "priority": 140,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "control-center",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "9021",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "control-center",
                "priority": 130,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "inter-broker",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "9091",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "inter-broker",
                "priority": 110,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "jolokia",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "7771",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "jolokia",
                "priority": 210,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "ksql-rest-api",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "8088",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "ksql-rest-api",
                "priority": 150,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "rest-proxy",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "8082",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "rest-proxy",
                "priority": 160,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "schema-registry-rest-api",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "8081",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "schema-registry-rest-api",
                "priority": 170,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "ssh",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "ssh",
                "priority": 100,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "zookeeper_1",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "2181",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "zookeeper_1",
                "priority": 180,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "zookeeper_2",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "2888",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "zookeeper_2",
                "priority": 190,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "zookeeper_3",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3888",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "zookeeper_3",
                "priority": 200,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "sg2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/495322cb-95ae-4e66-b31d-1ea25d0b4ada/resourceGroups/prod-confluent-kafka-rg/providers/Microsoft.Network/networkSecurityGroups/prod-confluent-kafka-rg-mgmt-nsg2",
            "location": "eastus2",
            "name": "prod-confluent-kafka-rg-mgmt-nsg2",
            "resource_group_name": "prod-confluent-kafka-rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "client-broker",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "9092",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "client-broker",
                "priority": 120,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "connect-rest-api",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "8083",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "connect-rest-api",
                "priority": 140,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "control-center",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "9021",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "control-center",
                "priority": 130,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "inter-broker",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "9091",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "inter-broker",
                "priority": 110,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "jolokia",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "7771",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "jolokia",
                "priority": 210,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "ksql-rest-api",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "8088",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "ksql-rest-api",
                "priority": 150,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "rest-proxy",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "8082",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "rest-proxy",
                "priority": 160,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "schema-registry-rest-api",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "8081",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "schema-registry-rest-api",
                "priority": 170,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "ssh",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "ssh",
                "priority": 100,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "zookeeper_1",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "2181",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "zookeeper_1",
                "priority": 180,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "zookeeper_2",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "2888",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "zookeeper_2",
                "priority": 190,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "zookeeper_3",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3888",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "zookeeper_3",
                "priority": 200,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "sg3",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/495322cb-95ae-4e66-b31d-1ea25d0b4ada/resourceGroups/prod-confluent-kafka-rg/providers/Microsoft.Network/networkSecurityGroups/prod-confluent-kafka-rg-mgmt-nsg3",
            "location": "eastus2",
            "name": "prod-confluent-kafka-rg-mgmt-nsg3",
            "resource_group_name": "prod-confluent-kafka-rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "client-broker",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "9092",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "client-broker",
                "priority": 120,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "connect-rest-api",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "8083",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "connect-rest-api",
                "priority": 140,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "control-center",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "9021",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "control-center",
                "priority": 130,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "inter-broker",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "9091",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "inter-broker",
                "priority": 110,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "jolokia",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "7771",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "jolokia",
                "priority": 210,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "ksql-rest-api",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "8088",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "ksql-rest-api",
                "priority": 150,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "rest-proxy",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "8082",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "rest-proxy",
                "priority": 160,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "schema-registry-rest-api",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "8081",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "schema-registry-rest-api",
                "priority": 170,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "ssh",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "ssh",
                "priority": 100,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "zookeeper_1",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "2181",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "zookeeper_1",
                "priority": 180,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "zookeeper_2",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "2888",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "zookeeper_2",
                "priority": 190,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "zookeeper_3",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3888",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "zookeeper_3",
                "priority": 200,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "pi_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "domain_name_label": "prod-kafka-confluent-1",
            "fqdn": "prod-kafka-confluent-1.eastus2.cloudapp.azure.com",
            "id": "/subscriptions/495322cb-95ae-4e66-b31d-1ea25d0b4ada/resourceGroups/prod-confluent-kafka-rg/providers/Microsoft.Network/publicIPAddresses/prod-confluent-kafka-ip-1",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "eastus2",
            "name": "prod-confluent-kafka-ip-1",
            "resource_group_name": "prod-confluent-kafka-rg",
            "sku": "Basic"
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "pi_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "domain_name_label": "prod-kafka-confluent-2",
            "fqdn": "prod-kafka-confluent-2.eastus2.cloudapp.azure.com",
            "id": "/subscriptions/495322cb-95ae-4e66-b31d-1ea25d0b4ada/resourceGroups/prod-confluent-kafka-rg/providers/Microsoft.Network/publicIPAddresses/prod-confluent-kafka-ip-2",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "eastus2",
            "name": "prod-confluent-kafka-ip-2",
            "resource_group_name": "prod-confluent-kafka-rg",
            "sku": "Basic"
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "pi_3",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "domain_name_label": "prod-kafka-confluent-3",
            "fqdn": "prod-kafka-confluent-3.eastus2.cloudapp.azure.com",
            "id": "/subscriptions/495322cb-95ae-4e66-b31d-1ea25d0b4ada/resourceGroups/prod-confluent-kafka-rg/providers/Microsoft.Network/publicIPAddresses/prod-confluent-kafka-ip-3",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "eastus2",
            "name": "prod-confluent-kafka-ip-3",
            "resource_group_name": "prod-confluent-kafka-rg",
            "sku": "Basic"
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "sb",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.0.128/25",
            "address_prefixes": [
              "10.0.0.128/25"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/495322cb-95ae-4e66-b31d-1ea25d0b4ada/resourceGroups/prod-confluent-kafka-rg/providers/Microsoft.Network/virtualNetworks/prod-confluent-kafka-network/subnets/prod-confluent-kafka-rg-subnet",
            "name": "prod-confluent-kafka-rg-subnet",
            "resource_group_name": "prod-confluent-kafka-rg",
            "virtual_network_name": "prod-confluent-kafka-network"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vn"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vn",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "guid": "04b4a894-8386-4a31-a796-2db9408b0d4f",
            "id": "/subscriptions/495322cb-95ae-4e66-b31d-1ea25d0b4ada/resourceGroups/prod-confluent-kafka-rg/providers/Microsoft.Network/virtualNetworks/prod-confluent-kafka-network",
            "location": "eastus2",
            "name": "prod-confluent-kafka-network",
            "resource_group_name": "prod-confluent-kafka-rg",
            "vm_protection_enabled": false
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    }
  ]
}